should 'fix' it

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ jobs:
 
 before_install:
   # Enable $_ENV variables in PHP.
-  - echo 'variables_order = "EGPCS"' >> /etc/php/${PHP_VERSION}/cli/conf.d/probo.ini
+  - echo 'variables_order = "EGPCS"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   # Exit build early if only documentation was changed in a Pull Request.
   - source ${BLT_DIR}/scripts/travis/exit_early
   # Prepare local testing version of blt-project so it can be used by ORCA.
