DT-1180: Upgrade dependencies for Drupal 9.

--- a/composer.json
+++ b/composer.json
@@ -29,30 +29,29 @@
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "drupal/coder": "^8.3.1",
-        "drupal/core": "^8.7.0",
+        "drupal/core": "^9.0.0-alpha1",
         "drupol/phposinfo": "^1.6",
-        "drush/drush": "^9.5.0 || ^10.0.1",
+        "drush/drush": "^10.0.1",
         "grasmash/drupal-security-warning": "^1.0.0",
-        "grasmash/yaml-cli": "^1.0.0",
+        "grasmash/yaml-cli": "^2.0.0",
         "grasmash/yaml-expander": "^1.2.0",
         "mglaman/drupal-check": ">=1.0.10 <1.1.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "sensiolabs/security-checker": "^5.0.0",
-        "symfony/config": "^3.0",
-        "symfony/console": "^3.4.0",
+        "symfony/config": "^4.4",
+        "symfony/console": "^4.4",
         "symfony/twig-bridge": "^3.3",
-        "symfony/yaml": "^3.2.8",
+        "symfony/yaml": "^4.4",
         "zaporylie/composer-drupal-optimizations": "^1.0",
         "zumba/amplitude-php": "^1.0"
     },
     "conflict": {
-        "drupal/core": "7.*",
         "drupal/drupal": "*"
     },
     "require-dev": {
         "acquia/coding-standards": "^0.4.0",
         "composer/composer": "^1.6.4",
-        "drupal/core-dev": "^8.8.0",
+        "drupal/core-dev": "^9.0.0-alpha1",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
         "phpunit/phpunit": "^4.8.35 || ^6.5 || ^7",
