--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "mglaman/drupal-check": ">=1.0.10 <1.1.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "sensiolabs/security-checker": "^5.0.0",
+        "squizlabs/php_codesniffer": "^3.0.1",
         "symfony/config": "^3.0",
         "symfony/console": "^3.4.0",
         "symfony/twig-bridge": "^3.3",
@@ -55,8 +56,7 @@
         "drupal/core-dev": "^8.8.0",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
-        "phpunit/phpunit": "^4.8.35 || ^6.5 || ^7",
-        "squizlabs/php_codesniffer": "^3.0.1"
+        "phpunit/phpunit": "^4.8.35 || ^6.5 || ^7"
     },
     "suggest": {
         "davereid/drush-acquia-hook-invoke": "dev-master",
