--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,10 @@ jobs:
     # ORCA D9 custom job.
     - { name: "Drupal 9 ORCA testing", env: ORCA_JOB=ISOLATED_RECOMMENDED ORCA_CUSTOM_FIXTURE_INIT_ARGS="--core=9.0.0-alpha1"}
     # Custom jobs.
-    - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm'
-    - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm'
+    - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm,d8'
+    - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm,d8'
       php: "7.4"
-    - env: DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='drupal'
+    - env: DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='drupal' PHPUNIT_EXCLUDE_GROUP='d8'
     - env: DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
   allow_failures:
     - env: DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
