Custom orca job.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
     # Standard ORCA jobs.
     - { name: "Static code analysis", env: ORCA_JOB=STATIC_CODE_ANALYSIS }
     # ORCA D9 custom job.
-    - { name: "Drupal 9 ORCA testing", env: ORCA_JOB=ISOLATED_RECOMMENDED ORCA_CUSTOM_FIXTURE_INIT_ARGS="--core=9.0.0-alpha1"}
+    - { name: "Drupal 9 ORCA testing", env: ORCA_JOB=CUSTOM ORCA_CUSTOM_FIXTURE_INIT_ARGS="--core=9.0.0-alpha1"}
     # Custom jobs.
     - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm,d8'
     - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm,d8'
