--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=7.3",
         "acquia/blt": "12.x-dev",
+        "acquia/coding-standards": "^0.4.2",
         "acquia/drupal-spec-tool": "*",
         "acquia/lightning": "dev-8.x-4.x",
         "acquia/memcache-settings": "*",
