--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -6,20 +6,9 @@
     "require": {
         "php": ">=7.3",
         "acquia/blt": "12.x-dev",
-        "acquia/drupal-spec-tool": "*",
-        "acquia/lightning": "dev-8.x-4.x",
-        "acquia/memcache-settings": "*",
-        "drupal/acquia_connector": "^1.5.0",
-        "drupal/acquia_purge": "^1.0-beta3",
-        "drupal/cog": "^1.0.0",
-        "drupal/config_split": "^1.0.0",
-        "drupal/core-composer-scaffold": "^8.8",
-        "drupal/core-recommended": "^8.8.0",
-        "drupal/devel": "^2.0.0",
-        "drupal/features": "^3.8.0",
-        "drupal/qa_accounts": "^1.0.0-alpha1",
-        "drupal/seckit": "^1.0.0-alpha2",
-        "drupal/shield": "^1.2.0"
+        "drupal/acquia_connector": "^2.0.0-beta1",
+        "drupal/core-composer-scaffold": "^9.0.0-alpha1",
+        "drupal/core-recommended": "^9.0.0-alpha1"
     },
     "config": {
         "platform": {
