--- a/.travis.yml
+++ b/.travis.yml
@@ -50,10 +50,11 @@ before_install:
   - source ${BLT_DIR}/scripts/travis/exit_early
   # Prepare local testing version of blt-project so it can be used by ORCA.
   - cp -r subtree-splits/blt-project /tmp/
+  - git init /tmp/blt-project/
+  - git -C /tmp/blt-project/ checkout -b ${ORCA_SUT_BRANCH}
   - composer config --global repositories.blt path /tmp/blt-project
   # Install ORCA.
   - git clone --branch ${ORCA_VERSION} --depth 1 https://github.com/acquia/orca.git ../orca
-  - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/65.patch | git -C ../orca apply
   - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/69.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
 
