--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "composer/semver": "^1.4",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
-        "consolidation/robo": "^1.4.12",
+        "consolidation/robo": "^1.4.12 || ^2",
         "cweagans/composer-patches": "^1.6.5",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "dflydev/dot-access-data": "^1.1.0",
