--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "sensiolabs/security-checker": "^5.0.0",
         "squizlabs/php_codesniffer": "^3.0.1",
         "symfony/config": "^4.4",
-        "symfony/console": "^4.4",
+        "symfony/console": "4.4.x-dev",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^4.4",
         "zaporylie/composer-drupal-optimizations": "^1.0",
