--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "sensiolabs/security-checker": "^5.0.0",
         "squizlabs/php_codesniffer": "^3.0.1",
         "symfony/config": "^4.4",
-        "symfony/console": "4.4.x-dev",
+        "symfony/console": "4.4.5",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^4.4",
         "zaporylie/composer-drupal-optimizations": "^1.0",
@@ -70,6 +70,11 @@
         "sort-packages": true
     },
     "extra": {
+        "patches": {
+            "symfony/console": {
+                "tty fix": "./console.patch"
+            }
+        },
         "branch-alias": {
             "10.x-dev": "10.0.x-dev"
         },
