--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
     "extra": {
         "patches": {
             "symfony/console": {
-                "tty fix": "./console.patch"
+                "tty fix": "https://github.com/symfony/symfony/files/4356765/symfony-console-36031.txt"
             }
         },
         "branch-alias": {
