--- a/composer.json
+++ b/composer.json
@@ -70,11 +70,6 @@
         "sort-packages": true
     },
     "extra": {
-        "patches": {
-            "symfony/console": {
-                "tty fix": "https://github.com/symfony/symfony/files/4356765/symfony-console-36031.txt"
-            }
-        },
         "branch-alias": {
             "10.x-dev": "10.0.x-dev"
         },
@@ -84,6 +79,11 @@
             "vendor/drupal/core": [
                 "type:drupal-core"
             ]
+        },
+        "patches": {
+            "symfony/console": {
+                "symfony console breaks non-interactive input": "https://github.com/symfony/symfony/files/4356765/symfony-console-36031.txt"
+            }
         },
         "phpcodesniffer-search-depth": 4
     },
