--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ before_install:
   - source ${BLT_DIR}/scripts/travis/exit_early
   # Install ORCA.
   - composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
+  - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/74.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
 
 install:
