--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ env:
     - ORCA_SUT_NAME=acquia/blt
     - ORCA_SUT_BRANCH=12.x
     - ORCA_VERSION=dev-develop
+    - ORCA_PHPCS_STANDARD=AcquiaDrupalStrict
     # Custom configuration.
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
     - BLT_DIR=$TRAVIS_BUILD_DIR
@@ -39,16 +40,13 @@ jobs:
     # Standard ORCA jobs.
     - { name: "Static code analysis", env: ORCA_JOB=STATIC_CODE_ANALYSIS }
     - { name: "D9 readiness test", php: "7.3", env: ORCA_JOB=D9_READINESS}
-    # Custom jobs.
-    - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm,d8'
-    - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm,d8'
-      php: "7.4"
 
 before_install:
   # Exit build early if only documentation was changed in a Pull Request.
   - source ${BLT_DIR}/scripts/travis/exit_early
   # Install ORCA.
   - composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
+  - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/74.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
 
 install:
