--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*",
-        "composer-plugin-api": "^1.1.0",
+        "composer-plugin-api": "^1.1.0 || ^2.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
         "consolidation/comments": "^1.0",
