--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*",
+        "acquia/drupal-environment-detector": "*",
         "composer-plugin-api": "^1.1.0",
         "composer/semver": "^1.4",
         "consolidation/comments": "^1.0",
