--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,17 @@
         "php": ">=7.3",
         "ext-json": "*",
         "acquia/drupal-environment-detector": "*",
-        "composer-plugin-api": "^1.1.0",
+        "composer-plugin-api": "^1.1.0 || ^2.0",
         "composer/semver": "^1.4",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
         "consolidation/robo": "^1.4.12 || ^2",
-        "cweagans/composer-patches": "^1.6.5",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "drupal/coder": "^8.3.1",
         "drupal/core": "^9.0.0-alpha1",
         "drupol/phposinfo": "^1.6",
         "drush/drush": "^10.2.2",
-        "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^2.0.0",
         "grasmash/yaml-expander": "^1.2.0",
         "sensiolabs/security-checker": "^5.0.0",
@@ -39,7 +37,6 @@
         "symfony/console": "^4.4.6",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^4.4",
-        "zaporylie/composer-drupal-optimizations": "^1.0",
         "zumba/amplitude-php": "^1.0"
     },
     "conflict": {
@@ -48,7 +45,7 @@
     "require-dev": {
         "acquia/coding-standards": "^0.4.0",
         "composer/composer": "^1.6.4",
-        "composer/installers": "^1.2.0",
+        "composer/installers": "^1.9.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "drupal/core-dev": "^9.0.0-alpha1",
         "knplabs/github-api": "^2.6",
@@ -73,7 +70,6 @@
             "10.x-dev": "10.0.x-dev"
         },
         "class": "Acquia\\Blt\\Composer\\Plugin",
-        "composer-exit-on-patch-failure": true,
         "installer-paths": {
             "vendor/drupal/core": [
                 "type:drupal-core"
