--- a/config/build.yml
+++ b/config/build.yml
@@ -48,7 +48,7 @@ cm:
 deploy:
   # If true, dependencies will be built during deploy. If false, you should commit dependencies directly.
   build-dependencies: true
-  dir: ${repo.root}/deploy
+  dir: ${tmp.dir}/blt-deploy
   docroot: ${deploy.dir}/docroot
   exclude_file: ${blt.root}/scripts/blt/deploy/deploy-exclude.txt
   exclude_additions_file: ${repo.root}/blt/deploy-exclude-additions.txt
