--- a/config/build.yml
+++ b/config/build.yml
@@ -72,6 +72,9 @@ drupal:
     port: 3306
 
 drush:
+  aliases:
+    local: self
+    ci: self
   bin: ${composer.bin}/drush
   dir: ${docroot}
   alias-dir: ${repo.root}/drush/sites
