--- a/config/build.yml
+++ b/config/build.yml
@@ -129,7 +129,7 @@ project:
   local:
     protocol: http
     hostname: 'local.${project.machine_name}.com'
-    uri: ${project.local.protocol}://${project.local.hostname}
+    uri: '${project.local.protocol}://${project.local.hostname}'
 
 setup:
   # Valid values are install, sync, import.
