Fix #4182: Missing project.human_name attribute

--- a/config/build.yml
+++ b/config/build.yml
@@ -126,6 +126,7 @@ phpcbf:
     - files.frontend.custom.themes
 
 project:
+  human_name: My BLT site
   local:
     hostname: local.${project.machine_name}.com
     protocol: http
