--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ env:
     # ORCA configuration.
     - ORCA_SUT_NAME=acquia/blt
     - ORCA_SUT_BRANCH=12.x
-    - ORCA_VERSION=dev-master
+    - ORCA_VERSION=^2
     - ORCA_PHPCS_STANDARD=AcquiaDrupalStrict
     - ORCA_FIXTURE_PROJECT_TEMPLATE=acquia/blt-project
     # Custom configuration.
