4218: Add an option to bypass installing the shell alias

--- a/config/build.yml
+++ b/config/build.yml
@@ -26,6 +26,7 @@ blt:
   command-cache-dir: ${blt.root}/cache/commands
   alias:
     auto-install: true
+    bypass: false
 
 composer:
   bin: ${repo.root}/${bin.path}
