Fixes #4242: defaults the stock hostname to self.

--- a/config/build.yml
+++ b/config/build.yml
@@ -128,7 +128,7 @@ phpcbf:
 project:
   human_name: My BLT site
   local:
-    hostname: local.${project.machine_name}.com
+    hostname: self
     protocol: http
     uri: ${project.local.protocol}://${project.local.hostname}
   profile:
