--- a/composer.json
+++ b/composer.json
@@ -18,30 +18,29 @@
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
-        "composer-plugin-api": "^1.1.0",
+        "composer-plugin-api": "^1.1.0 || ^2.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
         "consolidation/robo": "^1.4.12",
         "cweagans/composer-patches": "^1.6.5",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "drupal/coder": "^8.3.1",
         "drupal/core": "^8.7.0",
         "drupol/phposinfo": "^1.6",
         "drush/drush": "^9.5.0 || ^10.2.2",
-        "grasmash/drupal-security-warning": "^1.0.0",
+        "grasmash/drupal-security-warning": "dev-master",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
-        "oomphinc/composer-installers-extender": "^1.1",
+        "oomphinc/composer-installers-extender": "^1.1 | ^2",
         "sensiolabs/security-checker": "^5.0.0",
         "symfony/config": "^3.0",
         "symfony/console": "^3.4.0",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^3.2.8",
-        "zaporylie/composer-drupal-optimizations": "^1.0",
         "zumba/amplitude-php": "^1.0"
     },
     "conflict": {
