--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "grasmash/drupal-security-warning": "dev-master",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
-        "oomphinc/composer-installers-extender": "^1.1 | ^2",
+        "oomphinc/composer-installers-extender": "^1.1 || ^2",
         "sensiolabs/security-checker": "^5.0.0",
         "symfony/config": "^3.0",
         "symfony/console": "^3.4.0",
