--- a/.travis.yml
+++ b/.travis.yml
@@ -62,9 +62,8 @@ before_install:
   # Prepare local testing version of blt-project so it can be used by ORCA.
   - cp -r subtree-splits/blt-project /tmp/
   - composer config --global repositories.blt path /tmp/blt-project
-  - composer global require zaporylie/composer-drupal-optimizations
   # Install ORCA.
-  - composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
+  - COMPOSER_MEMORY_LIMIT=-1 composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
   - ../orca/bin/travis/before_install.sh
 
 install:
