--- a/composer.json
+++ b/composer.json
@@ -41,11 +41,8 @@
         "drupal/drupal": "*"
     },
     "require-dev": {
-        "acquia/coding-standards": "^0.4.0",
-        "composer/installers": "^1.9.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "knplabs/github-api": "^2.6",
-        "squizlabs/php_codesniffer": "^3.0.1"
+        "symfony/http-client": "^5.1"
     },
     "suggest": {
         "davereid/drush-acquia-hook-invoke": "dev-master",
