--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,13 @@
     "require": {
         "php": ">=7.3",
         "ext-json": "*",
-        "acquia/drupal-environment-detector": "*",
+        "acquia/drupal-environment-detector": "^1.2.1",
         "composer-plugin-api": "^1.1.0 || ^2.0",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
         "consolidation/robo": "^1.4.12 || ^2",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/annotations": "^1.10.0",
-        "doctrine/common": "^2.5",
-        "drupal/coder": "^8.3.1",
         "drupal/core": "^9.0.0-alpha1",
         "drupol/phposinfo": "^1.6",
         "drush/drush": "^10.2.2",
@@ -43,14 +41,8 @@
         "drupal/drupal": "*"
     },
     "require-dev": {
-        "acquia/coding-standards": "^0.4.0",
-        "composer/composer": "^1.6.4",
-        "composer/installers": "^1.9.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-        "drupal/core-dev": "^9.0.0-alpha1",
         "knplabs/github-api": "^2.6",
-        "phpunit/phpunit": "^4.8.35 || ^6.5 || ^7",
-        "squizlabs/php_codesniffer": "^3.0.1"
+        "symfony/http-client": "^5.1"
     },
     "suggest": {
         "davereid/drush-acquia-hook-invoke": "dev-master",
