--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 language: php
 
 os: linux
+dist: bionic
 
 version: ~> 1.0
 
@@ -44,6 +45,7 @@ jobs:
 before_install:
   # Exit build early if only documentation was changed in a Pull Request.
   - source ${BLT_DIR}/scripts/travis/exit_early
+  - composer self-update 1.10.16
   # Install ORCA.
   - composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
   - ../orca/bin/travis/before_install.sh
