--- a/scripts/travis/.travis.yml
+++ b/scripts/travis/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+dist: bionic
 
 # Adjust the version of PHP to match your production environment.
 # Making this version number greater than the production environment can have unintended consequences
