--- a/scripts/travis/.travis.yml
+++ b/scripts/travis/.travis.yml
@@ -1,10 +1,10 @@
 language: php
-dist: xenial
+dist: bionic
 
 # Adjust the version of PHP to match your production environment.
 # Making this version number greater than the production environment can have unintended consequences
 # including a non-functional prod environment.
-php: "7.2"
+php: "7.3"
 
 env:
   global:
@@ -56,16 +56,16 @@ deploy:
      skip_cleanup: true
      on:
        branch: develop
-       php: 7.2
+       php: 7.3
    - provider: script
      script: "${BLT_DIR}/scripts/travis/deploy_branch"
      skip_cleanup: true
      on:
        branch: master
-       php: 7.2
+       php: 7.3
    - provider: script
      script: "${BLT_DIR}/scripts/travis/deploy_tag"
      skip_cleanup: true
      on:
        tags: true
-       php: 7.2
+       php: 7.3
