--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
     # ORCA configuration.
     - ORCA_SUT_NAME=acquia/blt
     - ORCA_SUT_BRANCH=12.x
-    - ORCA_VERSION=dev-develop
+    - ORCA_VERSION=^3
     - ORCA_PHPCS_STANDARD=AcquiaDrupalStrict
     # Change to 1 to debug failed tests.
     - BLT_PRINT_COMMAND_OUTPUT=1
