Allow ORCA failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -81,6 +81,7 @@ jobs:
     - env: ORCA_JOB=ISOLATED_TEST_ON_NEXT_MAJOR_LATEST_MINOR_DEV
     - env: ORCA_JOB=INTEGRATED_TEST_ON_NEXT_MAJOR_LATEST_MINOR_DEV
     - env: ORCA_JOB=ISOLATED_UPGRADE_TEST_TO_NEXT_MAJOR_DEV
+    - env: ORCA_JOB=ISOLATED_TEST_ON_CURRENT
 
 before_install:
   - nvm use 12.13.1
