Don't require Composer 2 yet

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "php": ">=7.3",
         "ext-json": "*",
         "acquia/drupal-environment-detector": "^1.2.1",
-        "composer-plugin-api": "^2.0",
-        "composer-runtime-api": "^2.0",
+        "composer-plugin-api": "^1.1.0 || ^2.0",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
         "consolidation/robo": "^1.4.12 || ^2",
