--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-tests export-ignore
-.editorconfig export-ignore
-.gitignore export-ignore
-.travis.yml export-ignore
-phpcs.xml.dist export-ignore
+/tests export-ignore
+/.editorconfig export-ignore
+/.gitignore export-ignore
+/.travis.yml export-ignore
+/phpcs.xml.dist export-ignore
