--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
         "zumba/amplitude-php": "^1.0"
     },
     "conflict": {
-        "drupal/drupal": "*",
-        "acquia/blt-behat": "<=1.0.0"
+        "acquia/blt-behat": "<=1.0.0",
+        "drupal/drupal": "*"
     },
     "require-dev": {
         "knplabs/github-api": "^2.6",
