--- a/.github/no-response.yml
+++ b/.github/no-response.yml
@@ -1,3 +1,4 @@
 # Configuration for probot-no-response - https://github.com/probot/no-response
 
 responseRequiredLabel: "Awaiting response"
+daysUntilClose: 7
