Move Behat components to blt-behat plugin (#4305)
* Move Behat components to blt-behat plugin

* Remove tests wizard

* prevent upgrade breaking

* Fix test

* composer validation

* composer update

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "zumba/amplitude-php": "^1.0"
     },
     "conflict": {
+        "acquia/blt-behat": "<=1.0.0",
         "drupal/drupal": "*"
     },
     "require-dev": {
