Add 12.x-dev branch alias

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
     },
     "extra": {
         "branch-alias": {
-            "10.x-dev": "10.0.x-dev"
+            "10.x-dev": "10.0.x-dev",
+            "dev-main": "12.x-dev"
         },
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "installer-paths": {
