--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/core": "^8.7.0",
         "drupol/phposinfo": "^1.6",
         "drush/drush": "^9.5.0 || ^10.2.2",
+        "enlightn/security-checker": "^1.3",
         "grasmash/drupal-security-warning": "dev-master",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
