Fixes #4341: package.json and package-lock.json files not rsynced by default.

--- a/scripts/blt/deploy/.gitignore
+++ b/scripts/blt/deploy/.gitignore
@@ -257,3 +257,10 @@ Session.vim
 # Temporary files.
 .netrwhist
 *~
+
+# ------------
+# - Prevent supply chain attacks
+# - Reference: https://www.bleepingcomputer.com/news/security/researcher-hacks-over-35-tech-firms-in-novel-supply-chain-attack/
+# ------------
+package.json
+package-lock.json
