--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/annotations": "^1.10.0",
         "drupal/core": "^9.0.0-alpha1",
-        "drupol/phposinfo": "^1.6",
+        "loophp/phposinfo": "^1.6",
         "drush/drush": "^10.2.2",
         "enlightn/security-checker": "^1.3",
         "grasmash/yaml-cli": "^2.0.0",
