--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -18,6 +18,9 @@ jobs:
             name: "Integrated test on previous minor Drupal core version"
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
 
       - name: Before install
         env:
