--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           git clone https://github.com/danepowell/orca.git ../orca
           git -C ../orca checkout ORCA-189
-          composer -d ../orca install --no-dev --ignore-platform-req=php
+          composer install -d ../orca --no-dev --ignore-platform-req=php
           # composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
           ../orca/bin/actions/before_install.sh
       - name: Install
