Revert "step id"
This reverts commit e38d7ac8b79113bc3d524d11fedcf0a8def22a6f.

--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -39,9 +39,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12.x
-      - name: Setup PHP
-        id: setup-php
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: '7.3'
           coverage: xdebug2
